--- a/style.css
+++ b/style.css
@@ -217,3 +217,44 @@ h1 {
     background-color: #f1f1f1;
 }
 
+.bloques-informe {
+    display: flex;
+    gap: 20px;
+    margin-top: 30px;
+    flex-wrap: wrap;
+}
+
+.bloques-izquierda {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    flex: 1;
+    min-width: 300px;
+}
+
+.bloque-verde {
+    background-color: #b5ff63;
+    color: #000;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+}
+
+.bloque-recomendaciones {
+    background-color: #b5ff63;
+    color: #000;
+    flex: 2;
+    min-height: 420px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 22px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+    min-width: 400px;
+}
+
